Fix homepage images overflow bug at mid-width screen resolutions

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -8,6 +8,7 @@
     width: 316px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 0;
   }
 
   img{
@@ -49,7 +50,7 @@
 }
   
 .posts{
-    padding: 0 0 0 $leftmargin;
+    padding: 20px 0 0 $leftmargin;
     background-color: $white;
     z-index: 30;
     position: relative;
