--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,7 +24,18 @@
 // .top-banner
 //
 .top_banner{
-    margin: 0 0 20px 60px;
+    padding: 0 0 0 60px;
+    max-height: 200px;
+    overflow: hidden;
+    background: #fff;
+    box-sizing: content-box;
+    position: relative;
+    z-index:100;
+
+    @include mobile {
+      overflow: visible;
+      max-height: initial;
+    }
 }
 
 //
